--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -24,9 +24,10 @@
         {% endif %}
       {% endif %}
     {% endfor %}
-
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
+    
+    <a class="sidebar-nav-item" href="{{ site.github.repo }}">My Thoughts</a>
+    <a class="sidebar-nav-item" href="{{ site.github.repo }}">My Experiences</a>
+    <a class="sidebar-nav-item" href="{{ site.github.repo }}">My GitHub project</a>
     <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
   </nav>
 
