--- a/app.css
+++ b/app.css
@@ -7,7 +7,37 @@
                  0px 8px 13px rgba(31, 77, 107, 0.1)
                  0px 18px 23px rgba(57, 121, 20, 0.8);
 }
+List
+{
+    margin-block-start: 10%;
+}
 
+.button.btn-default
+{
+    color:black;
+    background-color: black;
+}
+a{
+    color:white;
+}
+thumbnail
+{
+    color:transparent;
+}
+.btn-default
+{
+    color:black;
+}
+.btn-warning
+{
+    background-color:rgba(185, 37, 214, 0.883);
+    color:white;
+    border-block-end-color:rgba(185, 37, 214, 0.883);
+    
+}
+.btn-warning:hover{
+    background: #9d3ab1e1;
+}
 body{
     background:url("sky.jpeg");
     background-size: cover;
